--- a/Src/iFramework.Plugins/IFramework.KafkaTools/Properties/launchSettings.json
+++ b/Src/iFramework.Plugins/IFramework.KafkaTools/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:45446",
-      "sslPort": 44314
+      "applicationUrl": "http://localhost:29570/",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -12,7 +12,8 @@
       "commandName": "IISExpress",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "use64Bit": true
     },
     "IFramework.KafkaTools": {
       "commandName": "Project",
@@ -20,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://localhost:29571/"
     }
   }
 }
