--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "SampleModelContext": "Server=(localdb)\\projects;Database=SampleModelContext.Core;Integrated Security=true;",
     "SampleModelContext.MySql": "server=127.0.0.1;Port=3306;uid=root;pwd=zhj777;database=SampleModelContext.Core",
-    "SampleModelContext.MongoDb": "mongodb://10.100.7.11:27017"
+    "SampleModelContext.MongoDb": "mongodb://10.100.7.11:27017/SampleModelContext"
   },
   "PathBase": "/core",
   "App": "CommandServiceCore",
