add dynamic control logLevel

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -31,9 +31,9 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Warning",
       "System": "None",
-      "Microsoft": "Information"
+      "Microsoft": "Warning"
     }
   }
 }
