--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -67,6 +67,7 @@
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <!--取消这里注释记录所有debug log-->
+    <appender-ref ref="debugAsyncAppender"/>
     <appender-ref ref="errorAsyncAppender"/>
   </root>
   <!--取消注释下面节, 指定name 的 debug log, 注意name是在logger.create时用的是className还是namespace.className 
@@ -75,10 +76,10 @@
     <level value="DEBUG"/>
     <appender-ref ref="debugRollingFile"/>
   </logger>-->
-  <logger name="Sample">
+ <!-- <logger name="Sample">
     <appender-ref ref="debugAsyncAppender"/>
   </logger> 
-  <!--<logger name="RabbitMQConsumer">
+  <logger name="RabbitMQConsumer">
     <appender-ref ref="debugAsyncAppender"/>
   </logger>-->
   <!--<logger name="Microsoft.EntityFrameworkCore.Database.Command">
