--- a/Src/iFramework.Plugins/Blueshift.EntityFrameworkCore.MongoDB/Blueshift.EntityFrameworkCore.MongoDB.csproj
+++ b/Src/iFramework.Plugins/Blueshift.EntityFrameworkCore.MongoDB/Blueshift.EntityFrameworkCore.MongoDB.csproj
@@ -9,9 +9,9 @@
     <PackageId>IFramework.EntityFrameworkCore.Blueshift.MongoDB</PackageId>
     <Company>Ivan</Company>
     <Authors>Ivan</Authors>
-    <Version>2.1.0-prerelease-0005</Version>
+    <Version>2.1.0-prerelease-0006</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageReleaseNotes>Support dbcontextpool</PackageReleaseNotes>
+    <PackageReleaseNotes>merge async issue fix from blueshift</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
