--- a/Src/iFramework.Plugins/IFramework.Log4Net/IFramework.Log4Net.csproj
+++ b/Src/iFramework.Plugins/IFramework.Log4Net/IFramework.Log4Net.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
+    <Version>2.0.1-prerelease-0001</Version>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <Description>Supports netcore standard2.0</Description>
