Add Npgsql unique key constrain support for ConcurrentProcessAttribute

--- a/Src/iFramework/IFramework.csproj
+++ b/Src/iFramework/IFramework.csproj
@@ -3,14 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.11-prerelease-0001</Version>
+    <Version>2.0.11-prerelease-0002</Version>
     <Description>Supports netcore standard2.0</Description>
     <Authors>Ivan</Authors>
     <PackageLicenseUrl></PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
-    <PackageReleaseNotes>1. Add IRepository.AddAsync method
-2. Add Aop featuer for MessageHandler
-3. Support ConcurrentProcess for unique constrain validation.</PackageReleaseNotes>
+    <PackageReleaseNotes>Add Npgsql unique key constrain support for ConcurrentProcessAttribute</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
