--- a/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.JsonNetCore/IFramework.JsonNet.csproj
@@ -3,12 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <AssemblyName>IFramework.JsonNet</AssemblyName>
     <RootNamespace>IFramework.JsonNet</RootNamespace>
     <Description>Supports netcore standard2.0</Description>
+    <PackageReleaseNotes>Add ToJson(this object obj, JsonSerializerSettings settings)</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
