Add InnerException for DomainException

--- a/Src/Sample/Sample.DTO/Sample.DTO.csproj
+++ b/Src/Sample/Sample.DTO/Sample.DTO.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\iFramework\IFramework.csproj" />
+  </ItemGroup>
+
   </Project>
