--- a/Src/iFramework.Plugins/IFramework.MessageQueue.Client.Abstracts/IFramework.MessageQueue.Client.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.Client.Abstracts/IFramework.MessageQueue.Client.Abstracts.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>2.0.2</Version>
+    <Version>2.0.3</Version>
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Supports netcore standard2.0</Description>
-    <PackageReleaseNotes>Add Message Processor Status</PackageReleaseNotes>
+    <PackageReleaseNotes>Add InnerException for DomainException</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
