--- a/Src/iFramework.Plugins/IFramework.MessageStores.MongoDb/IFramework.MessageStores.MongoDb.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores.MongoDb/IFramework.MessageStores.MongoDb.csproj
@@ -1,9 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>2.1.0-prerelease-0008</Version>
     <Authors>Ivan</Authors>
     <Company>Ivan</Company>
   </PropertyGroup>
