--- a/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
+++ b/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
-    <PackageReference Include="Unity.Interception" Version="5.5.5" />
-    <PackageReference Include="Unity.Microsoft.DependencyInjection" Version="2.0.10" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview5.19227.9" />
+    <PackageReference Include="Unity.Interception" Version="5.10.1" />
+    <PackageReference Include="Unity.Microsoft.DependencyInjection" Version="5.10.2" />
   </ItemGroup>
 
   <ItemGroup>
