--- a/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageStores.Abstracts/IFramework.MessageStores.Abstracts.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview5.19227.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.0.0-preview5.19227.1" />
   </ItemGroup>
 
   <ItemGroup>
