--- a/Src/iFramework.Plugins/IFramework.KafkaTools/IFramework.KafkaTools.csproj
+++ b/Src/iFramework.Plugins/IFramework.KafkaTools/IFramework.KafkaTools.csproj
@@ -16,11 +16,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" version="3.0.0-preview3-19153-02" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0-preview6.19307.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.0.0-preview5-19264-04" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\IFramework.AspNet\IFramework.AspNet.csproj" />
+    <ProjectReference Include="..\IFramework.DependencyInjection.Autofac\IFramework.DependencyInjection.Autofac.csproj" />
     <ProjectReference Include="..\IFramework.DependencyInjection.Unity\IFramework.DependencyInjection.Unity.csproj" />
     <ProjectReference Include="..\IFramework.JsonNetCore\IFramework.JsonNet.csproj" />
     <ProjectReference Include="..\IFramework.Log4Net\IFramework.Log4Net.csproj" />
