--- a/Src/iFramework.Plugins/IFramework.Microsoft.DependencyInjection/IFramework.DependencyInjection.Microsoft.csproj
+++ b/Src/iFramework.Plugins/IFramework.Microsoft.DependencyInjection/IFramework.DependencyInjection.Microsoft.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview6.19304.6" />
   </ItemGroup>
 
   <ItemGroup>
