--- a/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
+++ b/Src/iFramework.Plugins/IFramework.EntityFrameworkCore/IFramework.EntityFrameworkCore.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview6.19304.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.0.0-preview6.19304.10" />
   </ItemGroup>
 
   <ItemGroup>
