Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,9 @@ variables:
   
 steps:
 - task: DotNetCoreCLI@2
+  displayName: Build
   inputs:
     command: 'build'
-    projects: 'iFramework.Plugins/IFramework.KafkaTools/IFramework.KafkaTools.csproj'
+    projects: '**/*.csproj'
     arguments: '--configuration $(buildConfiguration)'
     workingDirectory: 'Src'
