--- a/Src/iFramework.Plugins/IFramework.MessageQueue.RabbitMQ/IFramework.MessageQueue.RabbitMQ.csproj
+++ b/Src/iFramework.Plugins/IFramework.MessageQueue.RabbitMQ/IFramework.MessageQueue.RabbitMQ.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3-beta1" />
     <PackageReference Include="RabbitMQ.Client" Version="6.0.0-pre3" />
   </ItemGroup>
 
