--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -4,6 +4,9 @@
     "SampleModelContext.MySql": "server=127.0.0.1;Port=3306;uid=root;pwd=zhj777;database=SampleModelContext.Core",
     "SampleModelContext.MongoDb": "mongodb://10.100.7.46:9007/SampleModelContext?maxPoolSize=2000&connectTimeoutMS=60000&serverSelectionTimeout=60000&socketTimeout=60000"
   },
+  "KafkaClientOptions": {
+    "BrokerList": "10.100.7.46:9092" 
+  } ,
   "PathBase": "/core",
   "App": "CommandServiceCore",
   "Member:A": "ddd",
