--- a/Src/Sample/Sample.CommandServiceCore/log4net.config
+++ b/Src/Sample/Sample.CommandServiceCore/log4net.config
@@ -24,7 +24,7 @@
     <!--<layout type="log4net.Layout.PatternLayout,log4net">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
     </layout>-->
-    <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
+    <layout type="IFramework.Logging.Log4Net.LogstashLayout, IFramework.Logging.Log4Net" >
       <app value="Sample" />
     </layout>
     <filter type="log4net.Filter.LevelRangeFilter">
@@ -54,7 +54,7 @@
     <!--<layout type="log4net.Layout.PatternLayout">
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline%newline" />
     </layout>-->
-    <layout type="IFramework.Log4Net.LogstashLayout, IFramework.Log4Net" >
+    <layout type="IFramework.Logging.Log4Net.LogstashLayout, IFramework.Logging.Log4Net" >
       <app value="Sample" />
     </layout>
   </appender>
