--- a/Src/iFramework.Plugins/IFramework.DependencyInjection.Autofac/IFramework.DependencyInjection.Autofac.csproj
+++ b/Src/iFramework.Plugins/IFramework.DependencyInjection.Autofac/IFramework.DependencyInjection.Autofac.csproj
@@ -23,7 +23,7 @@
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.0-rc1" />
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.5.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-preview9.19423.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.0.0-rc1.19456.10" />
     <PackageReference Include="System.ComponentModel.TypeConverter" Version="4.3.0" />
   </ItemGroup>
 
