--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -5,8 +5,8 @@
     "SampleModelContext.MongoDb": "mongodb://10.100.7.46:9007/SampleModelContext?maxPoolSize=2000&connectTimeoutMS=60000&serverSelectionTimeout=60000&socketTimeout=60000"
   },
   "KafkaClientOptions": {
-    "BrokerList": "10.100.7.46:9092" 
-  } ,
+    "BrokerList": "10.100.7.46:9092"
+  },
   "PathBase": "/core",
   "App": "CommandServiceCore",
   "Member:A": "ddd",
@@ -30,6 +30,13 @@
         "source": "Sample.CommandHandler"
       }
     ]
+  },
+  "RedisEventStoreOptions": {
+    "ConnectionString": "localhost:6379",
+    "DatabaseName": -1,
+    "AppendEventsLuaScript": "",
+    "GetEventsLuaScript": "",
+    "HandleEventLuaScript": ""
   },
   "Logging": {
     "IncludeScopes": false,
