--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -38,6 +38,10 @@
     "GetEventsLuaScript": "",
     "HandleEventLuaScript": ""
   },
+  "RedisSnapshotStoreOptions": {
+    "ConnectionString": "localhost:6379",
+    "DatabaseName": -1
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
