Implement EventSourcing CreateBankAccount handler

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -28,6 +28,16 @@
         "name": "CommandHandlers",
         "sourceType": "Assembly",
         "source": "Sample.CommandHandler"
+      },
+      {
+        "name": "BankAccountCommandHandlers",
+        "sourceType": "Type",
+        "source": "Sample.CommandHandler.Banks.AccountCommandHandler, Sample.CommandHandler"
+      },
+      {
+        "name": "BankTransactionCommandHandlers",
+        "sourceType": "Type",
+        "source": "Sample.CommandHandler.Banks.TransactionCommandHandler, Sample.CommandHandler"
       }
     ]
   },
