Remove exception detail for domainException.Message

--- a/Src/iFramework.Plugins/IFramework.AspNet/IFramework.AspNet.csproj
+++ b/Src/iFramework.Plugins/IFramework.AspNet/IFramework.AspNet.csproj
@@ -8,6 +8,7 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <PackageReleaseNotes>Support ConcurrentProcess for unique constrain validation.</PackageReleaseNotes>
+    <Version>3.1.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
