--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -58,11 +58,63 @@
     "DatabaseName": -1
   },
   "Logging": {
-    "IncludeScopes": false,
+    "IncludeScopes": true,
     "LogLevel": {
       "Default": "Warning",
       "System": "None",
       "Microsoft": "Warning"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "Filter": [
+              {
+                "Name": "ByIncludingOnly",
+                "Args": {
+                  "expression": "@Level = 'Information'"
+                }
+              }
+            ],
+            "WriteTo": [
+              {
+                "Name": "File",
+                "Args": {
+                  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level}] {Message} {Scope} {NewLine} {Exception}{NewLine}",
+                  "path": "log/sample_debug_.txt",
+                  "rollingInterval": "Day"
+                }
+              }
+            ]
+          }
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {SourceContext} [{Level}] {Message} {Scope} {NewLine}{Exception}{NewLine}",
+          "path": "log/sample_error_.txt",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Warning"
+        }
+      }
+      //{
+      //  "Name": "MSSqlServer",
+      //  "Args": {
+      //    "connectionString": "Server=(localdb)\\projects;Database=Ids.Application;Trusted_Connection=True;MultipleActiveResultSets=true",
+      //    "tableName": "Log",
+      //    "columnOptionsSection": {
+      //      "addStandardColumns": [ "LogEvent" ],
+      //      "removeStandardColumns": [ "Properties" ]
+      //    }
+      //  }
+      //}
+    ]
   }
 }
