--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -24,26 +24,26 @@
         "sourceType": "Assembly",
         "source": "Sample.AsyncDomainEventSubscriber"
       },
-      {
-        "name": "BankDomainEventSubscriber",
-        "sourceType": "Type",
-        "source": "Sample.AsyncDomainEventSubscriber.Banks.TransactionProcessManager, Sample.AsyncDomainEventSubscriber"
-      },
+      //{
+      //  "name": "BankDomainEventSubscriber",
+      //  "sourceType": "Type",
+      //  "source": "Sample.AsyncDomainEventSubscriber.Banks.TransactionProcessManager, Sample.AsyncDomainEventSubscriber"
+      //},
       {
         "name": "CommandHandlers",
         "sourceType": "Assembly",
         "source": "Sample.CommandHandler"
       },
-      {
-        "name": "BankAccountCommandHandlers",
-        "sourceType": "Type",
-        "source": "Sample.CommandHandler.Banks.AccountCommandHandler, Sample.CommandHandler"
-      },
-      {
-        "name": "BankTransactionCommandHandlers",
-        "sourceType": "Type",
-        "source": "Sample.CommandHandler.Banks.TransactionCommandHandler, Sample.CommandHandler"
-      }
+      //{
+      //  "name": "BankAccountCommandHandlers",
+      //  "sourceType": "Type",
+      //  "source": "Sample.CommandHandler.Banks.AccountCommandHandler, Sample.CommandHandler"
+      //},
+      //{
+      //  "name": "BankTransactionCommandHandlers",
+      //  "sourceType": "Type",
+      //  "source": "Sample.CommandHandler.Banks.TransactionCommandHandler, Sample.CommandHandler"
+      //}
     ]
   },
   "RedisEventStoreOptions": {
