use dbontext.BeginTransaction instead of TransactionScope

--- a/Src/Sample/Sample.CommandServiceCore/appsettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/appsettings.json
@@ -62,7 +62,8 @@
     "LogLevel": {
       "Default": "Warning",
       "System": "None",
-      "Microsoft": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
   "Serilog": {
