--- a/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
+++ b/Src/iFramework.Plugins/IFramework.DependencyInjection.Unity/IFramework.DependencyInjection.Unity.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Description>Supports netcore standard2.0</Description>
+    <Description>Fix Memory leak for ObjectProvider</Description>
     <Authors>Ivan</Authors>
     <PackageReleaseNotes>update unity packages</PackageReleaseNotes>
+    <Version>3.2.4.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
