--- a/Src/Sample/Sample.CommandServiceCore/Properties/launchSettings.json
+++ b/Src/Sample/Sample.CommandServiceCore/Properties/launchSettings.json
@@ -22,6 +22,11 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:29581/"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "publishAllPorts": true
     }
   }
 }
