--- a/Src/iFramework.Plugins/IFramework.Microsoft.DependencyInjection/IFramework.DependencyInjection.Microsoft.csproj
+++ b/Src/iFramework.Plugins/IFramework.Microsoft.DependencyInjection/IFramework.DependencyInjection.Microsoft.csproj
@@ -6,7 +6,8 @@
     <Authors>Ivan</Authors>
     <PackageProjectUrl>https://github.com/IvanZheng/IFramework</PackageProjectUrl>
     <PackageReleaseNotes>Fix bug that missing registion of IObjectProvider</PackageReleaseNotes>
-    <Description>Supports netcore standard2.0</Description>
+    <Description>Fix Memory leak for ObjectProvider</Description>
+    <Version>3.2.4.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
