--- a/Src/Sample/Sample.CommandServiceCore/Dockerfile
+++ b/Src/Sample/Sample.CommandServiceCore/Dockerfile
@@ -1,9 +1,10 @@
-FROM microsoft/aspnetcore:2.0 AS base
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM microsoft/aspnetcore-build:2.0 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 COPY ./ /src
+COPY nuget.config /root/.nuget/NuGet/NuGet.Config
 
 WORKDIR /src/Sample/Sample.CommandServiceCore
 RUN dotnet publish -c Release -o /app
